Center image and content and fix whitespace

--- a/03_09/style-main.css
+++ b/03_09/style-main.css
@@ -344,7 +344,9 @@ CSS Grid layout for modern browsers:
 
 		.feature {grid-column: 2/4;}
 
-		.sidebar {grid-column: 3/4;}
+		.sidebar {display: inherit; grid-template-columns: inherit; grid-column: 1/4; grid-row: 2/3; height: 0; }
+
+		.twin:last-of-type {grid-column: 3/4;}
 
 		.masthead {
 			grid-column: 1/4;
